Certificaciones,Biblioteca,Rutas en Clientes

--- a/KLS_WEB/KLS_WEB/Views/Clients/formClients.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/formClients.cshtml
@@ -143,7 +143,7 @@
             <div class="col-md-8">
                 <div class="catalog-list" id="catalogList">
 
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/ActiveRoutes/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 local_shipping
@@ -151,7 +151,7 @@
                             <div class="name font-barlow">Rutas activas</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Certifications/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 workspace_premium
@@ -159,7 +159,7 @@
                             <div class="name font-barlow">Certificaciones</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Library/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 store
@@ -167,7 +167,7 @@
                             <div class="name font-barlow">Biblioteca Digital</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Contacts/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 call
@@ -183,7 +183,7 @@
                             <div class="name font-barlow">Requisitos</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Box/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 all_inbox
@@ -191,7 +191,7 @@
                             <div class="name font-barlow">Tipos de Mercancia</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Origins/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 map
@@ -199,7 +199,7 @@
                             <div class="name font-barlow">Origenes</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Destinations/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 
@@ -207,7 +207,7 @@
                             <div class="name font-barlow">Destinos</div>
                         </div>
                     </a>
-                    <a href="/Clients/formClients/@id" class="catalog">
+                    <a href="/Clients/Others/@id" class="catalog">
                         <div class="content">
                             <span class="material-icons">
                                 settings
