--- a/KLS_WEB/KLS_WEB/Views/Travels/DetailsOLD.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/DetailsOLD.cshtml
@@ -14,7 +14,10 @@
                 <div class="text-uppercase poppins medium size-24 pl-2">Viaje @Model.Folio</div>
             </div>
             <div class="d-flex mx-auto">
-                <h4>EN TRÁNSITO</h4>
+                <h4>
+                    <span class="dot"></span>
+                    EN TRÁNSITO
+                </h4>
                 <h4 class="ml-5">A TIEMPO (0HR)</h4>
             </div>
         </div>
