--- a/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/formCarriers.cshtml
@@ -117,6 +117,7 @@
                             <label class="col-5 col-form-label col-form-label-sm">RFC</label>
                             <div class="col-sm-7">
                                 <input type="text" class="form-control form-control-sm" id="Rfc" name="Rfc">
+                                <span id='result' style="font-size:12px;"></span>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -156,7 +157,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-5 col-form-label col-form-label-sm">Otra res social</label>
+                            <label class="col-5 col-form-label col-form-label-sm">Otra red social</label>
                             <div class="col-sm-7">
                                 <input type="text" class="form-control form-control-sm" id="OtraRed" name="OtraRed">
                             </div>
@@ -263,6 +264,28 @@
 @section Scripts{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
     <script>
+        function validateEmail(email) {
+            var re = /^([A-ZÑ&]{3,4}) ?(?:- ?)?(\d{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[12]\d|3[01])) ?(?:- ?)?([A-Z\d]{2})([A\d])$/;
+            return re.test(email);
+        }
+
+        function validate() {
+          var $result = $("#result");
+          var email = $("#Rfc").val();
+          $result.text("");
+
+          if (validateEmail(email)) {
+            $result.text(email + " Válido");
+            $result.css("color", "green");
+          } else {
+            $result.text(email + " No es válido");
+            $result.css("color", "red");
+          }
+          return false;
+        }
+
+        $("#Rfc").on("keyup", validate);
+
         $(window).ready(function () {
             valId();
             $("#frmRegister").submit(function (event) {
